resources/assets/sass/_layout.scss
// Stuff that's everywhere

body {
    background: url(../images/body-background.png) #f4f4f4;
}

body > .container {
  background: $content-background-color;
  padding-bottom: 1rem;
  border: 1px solid $twhl-brand;
}

body > footer {
  padding: 40px 15px;
  text-align: center;
  font-size: .9em;
}

.table {
  .td, .th {

  }
  tr.unread {
    background-color: lighten($alert-success-bg, 6%) !important;
  }
  > thead > tr > th {
    border-bottom-color: $twhl-brand;
  }

  .col-5p  { width:  5%; }
  .col-10p { width: 10%; }
  .col-15p { width: 15%; }
  .col-20p { width: 20%; }
  .col-25p { width: 25%; }
  .col-30p { width: 30%; }
}

.breadcrumb {
  margin-bottom: 0.5rem;
  padding: 0;

  li {
    @extend .breadcrumb-item;
  }

  .no-breadcrumb {
    &::before {
      content: '';
    }
  }
}

dl.dl-horizontal {
  @extend .row;
  dt {
    @extend .col-3;
    text-align: right;
  }
  dd {
    @extend .col-9;
    text-align: left;
  }

  &.dl-small {
    text-align: left;
    dt { @extend .col-2; }
    dd { @extend .col-10; }
  }

  &.dl-wide {
    dt { @extend .col-4; }
    dd { @extend .col-8; }
  }

  &.dl-wider {
    dt { @extend .col-5; }
    dd { @extend .col-7; }
  }

  &.dl-half {
    dt { @extend .col-6; }
    dd { @extend .col-6; }
  }

  @media (max-width: map_get($grid-breakpoints, 'sm') - 1px) {
    dt {
      text-align: left;
      max-width: 100%;
      flex-basis: 100%;
    }
    dd {
      max-width: 100%;
      flex-basis: 100%;
      border-left: 1rem solid transparent;
    }
  }
}

ul.inline-bullet {
  list-style: none;
  padding: 0;
  margin: 0;

  li {
    display: inline-block;

    &::before {
      content: "\2022";
      padding: 0 2px;
    }

    &:first-child::before {
      content: '';
    }
  }
}

.loading {
  position: relative;

  &::after {
    background-color: rgba(0,0,0,0.3);
    bottom: 0;
    content: "";
    display: block;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 99;
  }
}

@media screen and (min-width: map_get($grid-breakpoints, 'md')) {
  .columns-3, .columns-4 {
    column-count: 2;
    column-gap: 20px;
  }
}

@media screen and (min-width: map_get($grid-breakpoints, 'lg')) {
  .columns-2 {
    column-count: 2;
    column-gap: 20px;
  }
  .columns-3 {
    column-count: 3;
    column-gap: 20px;
  }
  .columns-4 {
    column-count: 4;
    column-gap: 20px;
  }
}

@media screen and (-webkit-min-device-pixel-ratio:0) {
  select,
  textarea,
  input {
    font-size: 16px;
  }
}

